# privatePlasma

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  foundry.toml  netlify.toml  package-lock.json
client/: package-lock.json  package.json  tsconfig.json
client/src/: crypto.ts  encryption.ts  index.ts  merkle.ts  pool.ts  prover.ts  types.ts  wallet.ts
contracts/: MerkleTree.sol  ShieldedPool.sol
contracts/interfaces/: IERC20.sol  ISP1Verifier.sol
deploy/: Deploy.s.sol
docs/: e2e-test.md  frontend-integration.md  how-it-works.md
docs/diagrams/: README.md  data-artifacts.mmd  deployment-flow.mmd  frontend-flow.mmd  makefile-orchestration.mmd  proof-generation-flow.mmd  proxy-flow.mmd  sdk-flow.mmd  sequence-deposit.mmd  sequence-transfer.mmd  sequence-withdraw.mmd  system-architecture.mmd
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  config.ts  global.css  landing.css  theme.css
frontend/src/components/: ConnectWallet.tsx  Dashboard.tsx  DepositForm.tsx  LandingPage.tsx  NotesList.tsx  ProxySettingsModal.tsx  TransferForm.tsx  TxStatus.tsx  WithdrawForm.tsx
frontend/src/context/: ShieldedContext.tsx  WalletContext.tsx
frontend/src/lib/: browser-crypto.ts  browser-prover.ts  pool-client.ts  settings.ts
lib/: Cargo.toml
lib/src/: lib.rs
programs/transfer/: Cargo.toml
programs/transfer/src/: main.rs
programs/withdraw/: Cargo.toml
programs/withdraw/src/: main.rs
proxy/: package-lock.json  package.json  server.ts
script/: Cargo.toml  build.rs
script/src/: main.rs
test/: MerkleTree.t.sol  MockERC20.sol  MockSP1Verifier.sol  ShieldedPool.t.sol
tests/: Cargo.toml
tests/src/: lib.rs
