[workspace]
members = ["lib", "script", "tests"]
resolver = "2"

[workspace.dependencies]
sp1-sdk = "5.0.0"
sp1-build = "5.0.0"
serde = { version = "=1.0.217", default-features = false, features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1.0"
