[workspace]
members = ["lib", "script", "tests"]
resolver = "2"

[workspace.dependencies]
sp1-sdk = { version = "=5.2.4", default-features = false, features = ["network"] }
sp1-build = "=5.2.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1.0"

# Pin alloy crates to 1.4.x to avoid alloy-consensus 1.0.30 breakage
alloy-consensus = { version = "1.4", default-features = false }
alloy-tx-macros = { version = "1.4", default-features = false }
alloy-eips = { version = "1.4", default-features = false }
alloy-network = { version = "1.4", default-features = false }
alloy-rpc-types-eth = { version = "1.4", default-features = false }
alloy-signer = { version = "1.4", default-features = false }
alloy-signer-local = { version = "1.4" }
alloy-signer-aws = { version = "1.4" }
alloy-primitives = { version = "1.4", default-features = false }

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
