[package]
name = "shielded-pool-script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { workspace = true }
shielded-pool-lib = { path = "../lib" }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
