[package]
name = "shielded-pool-script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { workspace = true }
shielded-pool-lib = { path = "../lib" }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

# Force alloy 1.4.x to avoid alloy-consensus 1.0.30 breakage
alloy-consensus = { workspace = true }
alloy-tx-macros = { workspace = true }
alloy-eips = { workspace = true }
alloy-network = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-signer-aws = { workspace = true }
alloy-primitives = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
